--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,12 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+PAYPAL_ID=
+PAYPAL_SECRET=
+#Docker setup
+# Set current user id and group id for volume-mapping
+UID_GID=1000:1000
+
+GOOGLE_RECAPTCHA_KEY=
+GOOGLE_RECAPTCHA_SECRET=
