--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,12 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+PAYPAL_ID=AaitLyXVVPoYLl1YqUL03zz-E_xMge24pIMnBmQJaL9GFSUhJQNcMt900sEg6rtyl-RG7vXaciPdVim-
+PAYPAL_SECRET=EI4z7A_lyGuIls1Ig3f2IDBZ28oKqtsUD2Bx_2gmDf6FlkMHRS49FdqE6J3Pral6jAfCNsHd9LSxfNh4
+#Docker setup
+# Set current user id and group id for volume-mapping
+UID_GID=1000:1000
+
+GOOGLE_RECAPTCHA_KEY=6LdAZbAcAAAAACaJQ9VRabwrTDu-fUvHrJbujYE2
+GOOGLE_RECAPTCHA_SECRET=6LdAZbAcAAAAACmaHVzWDD1u6O0vLxT8nY3mT2cC
