--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravelcollective/html": "^6.2",
+        "paypal/rest-api-sdk-php": "^1.14",
         "prettus/l5-repository": "^2.7",
         "tucker-eric/eloquentfilter": "^3.0"
     },
